Opened 15 months ago

Closed 14 months ago

Last modified 14 months ago

#18657 closed bug (fixed)

Copy To from read-only mounts fails

Reported by: TmTFx Owned by: jscipione
Priority: normal Milestone: R1/beta5
Component: Applications/Tracker Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

If I mount a pendrive in read-only mode, I cannot copy any of its files to home or to any writable path with the function right-button menu -> "Copy to" or from "File"-"Copy to" menu

it says: You can't move or copy items to read-only volumes.

but the target is writable

Using nightly 57365 x64

Change History (7)

comment:1 by waddlesplash, 15 months ago

Component: - GeneralApplications/Tracker

comment:2 by humdinger, 15 months ago

Reproducible. It does work when drag'n'dropping the file.

comment:3 by waddlesplash, 14 months ago

Should be fixed after hrev57402, please retest.

comment:4 by jscipione, 14 months ago

Owner: changed from nobody to jscipione
Status: newassigned

None of my changes deal with the operation succeeding or not. My changes only deal with whether or not the option is turned on or off. So the fact that he can get into the copy to menu means that part is working. I’ll double check this.

in reply to:  3 comment:5 by TmTFx, 14 months ago

Replying to waddlesplash:

Should be fixed after hrev57402, please retest.

Nope, still cannot copy from ro mounts with drilling down menu (from context menu-aka right button mouse menu) hrev 57406

Last edited 14 months ago by TmTFx (previous) (diff)

comment:6 by waddlesplash, 14 months ago

Milestone: UnscheduledR1/beta5
Resolution: fixed
Status: assignedclosed

Fixed merged in hrev57410.

comment:7 by jscipione, 14 months ago

This was indeed a regression caused by hrev56978. I added a read-only check in that rev and it was not working correctly in this case.

Note: See TracTickets for help on using tickets.